<resources>
    <string name="username">Username</string>
    <string name="input_username">Masukkan Username</string>
    <string name="password">Password</string>
    <string name="input_password">Masukkan Password</string>
    <string name="login">Log In</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kelola_data_kantor">Kelola Data Kantor</string>
    <string name="kelola_data_sdm">Kelola Data Karyawan</string>
    <string name="admin">Admin</string>
    <string name="kehadiran_semua_kantor_hari_ini">Kehadiran semua kantor hari ini</string>
    <string name="report">Report</string>
    <string name="kantor">Kantor</string>
    <string name="report_absensi_tiap_kantor_cabang">Report absensi tiap kantor cabang</string>
    <string name="sdm">SDM</string>
    <string name="leader_sdm">Leader SDM</string>
    <string name="management">Management</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="nama_cabang">Nama Cabang</string>
    <string name="masukkan_nama_cabang">Masukkan nama cabang</string>
    <string name="alamat_cabang">Alamat Cabang</string>
    <string name="masukkan_alamat_cabang">Masukkan alamat cabang</string>
    <string name="masukkan_no_telepon">Masukkan no telepon</string>
    <string name="no_telepon">No Telepon</string>
    <string name="pilih_penanggung_jawab">Pilih penanggung jawab</string>
    <string name="penanggung_jawab">Penanggung jawab</string>
    <string name="simpan">Simpan</string>
    <string name="pilih">Pilih</string>
    <string name="lihat_list_staff">Lihat list staff</string>
    <string name="nama">Nama</string>
    <string name="masukkan_nama_user">Masukkan nama user</string>
    <string name="ketikkan_password">Ketikkan password</string>
    <string name="biodata">Biodata</string>
    <string name="masukkan_nip">Masukkan NIP</string>
    <string name="masukkan_nama_lengkap">Masukkan nama lengkap</string>
    <string name="masukkan_tempat_lahir">Masukkan asal desa</string>
    <string name="masukkan_jenis_kelamin">Masukkan jenis kelamin</string>
    <string name="masukkan_no_hp">Masukkan no HP</string>
    <string name="masukkan_email">Masukkan email</string>
    <string name="kantor_cabang">Kantor Cabang</string>
    <string name="pilih_kantor_cabang">Pilih kantor cabang</string>
    <string name="jabatan">Jabatan</string>
    <string name="pilih_jabatan">Pilih jabatan</string>
    <string name="password_lama">Password Lama</string>
    <string name="history">History</string>
    <string name="title_activity_maps">Map</string>
    <string name="next">Next</string>
    <string name="riwayat">Riwayat</string>
    <string name="masukkan_no_partner">Masukkan no partner</string>
    <string name="submit">Submit</string>
    <string name="tambah_jabatan">Tambah Jabatan</string>
    <string name="lihat_data">Lihat Data</string>
    <string name="waktu">waktu</string>
    <string name="ask">Apa yang Kamu lakukan hari ini</string>
    <string name="data_hadir">Data hadir</string>
    <string name="semua_kantor">SEMUA KANTOR</string>
    <string name="ket_absen_pulang">Kamu berhasil absen pulang.\nTerimakasih untuk hari ini.</string>
    <string name="ket_belum_waktu_pulang">Belum  waktunya pulang.\nKamu harus tetap semangat!!</string>
    <string name="ket_absen_lebih_awal">Horee! Berhasil absen lebih awal.\nKamu dapat 2 poin hari ini.</string>
    <string name="ket_absen_tepat_waktu">Kamu berhasil absen sesuai waktu, \ncoba datang lebih awal agar kamu \nbisa dapat poin.</string>
    <string name="ket_absen_telat">Kamu berhasil absen tapi \nsayang poinmu harus berkurang. \nYuk besok jangan telat lagi.</string>
    <string name="data_tidak_hadir">Data Tidak Hadir</string>
    <string name="notifications_admin_channel_name">Notification Title</string>
    <string name="notifications_admin_channel_description">Notification Discription</string>
    <string name="text_data_partner">Data Partner</string>
    <string name="label_detail_invoice_admin">Detail Invoice Admin</string>
    <string name="label_detail_invoice_gaji">Detail Invoice Gaji</string>
    <string name="label_open">OPEN</string>
    <string name="label_completed">COMPLETED</string>
    <string name="label_expired">EXPIRED</string>
    <string name="txt_complete_invoice_confirmation">Apakah kamu yakin ingin menyelesaikan transaksi ini ?</string>
    <string name="txt_cancel_invoice_confirmation">Apakah kamu yakin ingin membatalkan transaksi ini ?</string>
    <string name="label_data_device">Data Device</string>
    <string name="jumlah_device">Jumlah Device:</string>
    <string name="tambah_device_partner">Tambah Device Partner</string>
    <string name="jenis">Jenis</string>
    <string name="pilih_jenis_device">Pilih Jenis Device</string>
    <string name="merek">Merek</string>
    <string name="tulis_merek">Tulis Merek…</string>
    <string name="spesifikasi">Spesifikasi</string>
    <string name="tulis_spesifikasi">Tulis Spesifikasi…</string>
    <string name="partner">Partner</string>
    <string name="pilih_partner">Pilih Partner</string>
    <string name="pilih_sdm">Pilih SDM</string>
    <string name="tanggal_diterima">Tanggal Diterima</string>
    <string name="pilih_tanggal_diterima">Pilih Tanggal Diterima</string>
    <string name="lihat_devices">Lihat Devices</string>
    <string name="label_perhitungan_bonus">Perhitungan Bonus</string>
    <string name="hint_masukkan_perhitungan_bonus">Masukkan perhitungan bonus</string>
    <string name="jumlah_sdm_non_job">Jumlah SDM Non Job</string>
    <string name="partner_off_title">Partner Off</string>
    <string name="status_invoice_label">STATUS INVOICE :</string>
    <string name="tanggal_partner_off">TANGGAL PARTNER OFF</string>
    <string name="mode_kerja">Mode Kerja</string>
    <string name="periode">Periode</string>
    <string name="nomor_partner">Nomor Partner</string>
    <string name="evaluasi_berhenti_kolaborasi">Evaluasi Berhenti Kolaborasi</string>
    <string name="alasan_utama_berhenti_berkolaborasi">Alasan Utama Berhenti Berkolaborasi</string>
    <string name="saran_perbaikan">Saran Perbaikan</string>
    <string-array name="role">
        <item>Admin</item>
        <item>Management</item>
        <item>SDM</item>
    </string-array>
    <string name="dokumentasi">Dokumentasi</string>
    <string name="nama_produk">Nama Produk</string>
    <string name="poin">Poin</string>
    <string name="qrdata">qrdata</string>
    <string name="hari_libur_label">Hari Libur</string>
    <string name="sampai">Sampai</string>
    <string name="dari">Dari</string>
    <string name="judul">Judul</string>
    <string name="tambah_hari_libur">Tambah Hari Libur</string>
    <string name="tambah">Tambah</string>
    <string name="pilih_tanggal">Pilih tanggal</string>
    <string name="masukkan_judul">Masukkan Judul</string>
    <string name="ubah_label">Ubah</string>
    <string name="ubah_hari_libur">Ubah Hari Libur</string>
    <string name="judul_empty_message">Judul tidak boleh dikosong.</string>
    <string name="list_data">List Data</string>
    <string name="laporan_title">Laporan</string>
    <string name="leads">Leads</string>
    <string name="masukkan_jumlah_leads">Masukkan jumlah leads..</string>
    <string name="masukkan_jumlah_transaksi">Masukkan jumlah transaksi..</string>
    <string name="lbl_transaksi">Transaksi</string>
    <string name="masukkan_jumlah_order">Masukkan jumlah order..</string>
    <string name="order">Order</string>
    <string name="rating_konversi">Rating Konversi</string>
    <string name="rating_order">Rating Order</string>
    <string name="masukkan_catatan">Masukkan catatan..</string>
    <string name="kirim_laporan">Kirim Laporan</string>
    <string name="tambah_laporan_title">Tambah Laporan</string>
    <string name="edit_laporan">Edit Laporan</string>
    <string name="label_on">ON</string>
    <string name="shift">Shift</string>
    <string name="ok">Oke</string>
    <string name="platform">Platform</string>
    <string name="success_edit_profile">Profil kamu berhasil diubah</string>
    <string-array name="work_scope">
        <item>ALL</item>
        <item>MANAGEMENT</item>
        <item>SDM</item>
    </string-array>
    <string-array name="position">
        <item>Customer Service</item>
        <item>Advertiser</item>
    </string-array>
    <string-array name="division">
        <item>Pilih Divisi</item>
        <item>SDM Partner</item>
        <item>SDM Non Partner</item>
        <item>SDM Management</item>
    </string-array>
    <string-array name="permission">
        <item>Semua</item>
        <item>Izin</item>
        <item>Sakit</item>d
        <item>Cuti</item>
    </string-array>
    <string-array name="form_permission_options">
        <item>Izin</item>
        <item>Sakit</item>
        <item>Cuti</item>
    </string-array>
    <string-array name="gender">
        <item>Pilih Jenis Kelamin</item>
        <item>Laki-laki</item>
        <item>Perempuan</item>
    </string-array>
    <string-array name="genders">
        <item>Laki-laki</item>
        <item>Perempuan</item>
    </string-array>
    <string-array name="status">
        <item>Tersedia</item>
        <item>Ada Acara</item>
    </string-array>
    <string-array name="partner_status">
        <item>Pause</item>
        <item>Aktif</item>
    </string-array>
    <string-array name="martial_status">
        <item>Pilih Status Pernikahan</item>
        <item>Belum Menikah</item>
        <item>Sudah Menikah</item>
    </string-array>
    <string-array name="martial_statuses">
        <item>Belum Menikah</item>
        <item>Sudah Menikah</item>
    </string-array>
    <string-array name="month_array">
        <item>Pilih Bulan</item>
        <item>Januari</item>
        <item>Februari</item>
        <item>Maret</item>
        <item>April</item>
        <item>Mei</item>
        <item>Juni</item>
        <item>July</item>
        <item>Agustus</item>
        <item>September</item>
        <item>Oktober</item>
        <item>November</item>
        <item>Desember</item>
    </string-array>
    <string-array name="invoice_type">
        <item>Semua</item>
        <item>Admin</item>
        <item>Gaji SDM</item>
    </string-array>
    <string-array name="device_type">
        <item>HP</item>
        <item>Laptop</item>
        <item>Modem</item>
        <item>Lainnya</item>
    </string-array>
    <string-array name="payment_methode">
        <item>Metode Pembayaran</item>
        <item>COD (Bayar di tempat)</item>
        <item>Transfer Bank</item>
    </string-array>
    <string-array name="bank">
        <item>BCA</item>
        <item>BNI</item>
        <item>BRI</item>
    </string-array>
    <string name="info_tayangan">Jumlah tayangan iklan yang dilihat oleh target audience</string>
    <string name="info_klik_iklan">Jumlah orang yang klik iklan yang pada akhirnya setelah klik akan menuju ke halaman penawaran / landing page (LP)</string>
    <string name="info_visitor">Jumlah orang yang mengunjungi halaman penawaran / landingpage (LP) di web</string>
    <string name="info_klik_kontak">Jumlah orang yang klik tombol kontak pada landing page di website</string>
    <string name="info_leads_cs">Jumlah orang yang akhirnya kontak ke tim penjualan/CS</string>
    <string name="info_biaya_iklan">Biaya iklan yang dihabiskan</string>
    <string name="info_ctr_link">Ukuran tingkat ketertarikan iklan, diidentifikasi dengan Click Through Rate (CTR) yaitu perbandingan antara jumlah orang yang klik iklan menuju web terhadap jumlah tayangan iklan</string>
    <string name="info_rasio_lp">Ukuran tingkat konversi halaman penawaran; diidentifikasi dari perbandingan antara orang yang klik tombol kontak dibandingkan dengan pebaca halaman penawaran tersebut</string>
</resources>