<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.sdm.laporan.AddSdmLaporanActivity">

    <include layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/tv14spf48070_avenir_heavy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginStart="@dimen/_24dp"
                android:text="@string/role"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtRole"
                style="@style/tv14sp000000_avenir_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_dropdown_grey"
                android:clickable="false"
                android:focusable="false"
                android:text="Customer Service"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>

            <TextView
                style="@style/tv14spf48070_avenir_heavy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12dp"
                android:layout_marginStart="@dimen/_24dp"
                android:text="Tanggal" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtTanggal"
                style="@style/tv14sp000000_avenir_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_calendar2"
                android:clickable="true"
                android:focusable="false"
                android:text="12 Desember 2020"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>

            <TextView
                style="@style/tv14spf48070_avenir_heavy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12dp"
                android:layout_marginStart="@dimen/_24dp"
                android:text="@string/leads" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtLeads"
                style="@style/tv14sp000000_avenir_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/masukkan_jumlah_leads"
                android:inputType="number"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>

            <TextView
                style="@style/tv14spf48070_avenir_heavy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12dp"
                android:layout_marginStart="@dimen/_24dp"
                android:text="@string/lbl_transaksi" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtTransaksi"
                style="@style/tv14sp000000_avenir_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/masukkan_jumlah_transaksi"
                android:inputType="number"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>

            <TextView
                style="@style/tv14spf48070_avenir_heavy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12dp"
                android:layout_marginStart="@dimen/_24dp"
                android:text="@string/order" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtOrder"
                style="@style/tv14sp000000_avenir_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/masukkan_jumlah_order"
                android:inputType="number"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>

            <TextView
                style="@style/tv14spf48070_avenir_heavy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12dp"
                android:layout_marginStart="@dimen/_24dp"
                android:text="@string/rating_konversi" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtRatingKonversi"
                style="@style/tv14sp000000_avenir_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0%"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>

            <TextView
                style="@style/tv14spf48070_avenir_heavy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12dp"
                android:layout_marginStart="@dimen/_24dp"
                android:text="@string/rating_order" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtRatingOrder"
                style="@style/tv14sp000000_avenir_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0%"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>

            <TextView
                style="@style/tv14spf48070_avenir_heavy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12dp"
                android:layout_marginStart="@dimen/_24dp"
                android:text="N.B" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtCatatan"
                style="@style/tv14sp000000_avenir_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/masukkan_catatan"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSave"
                style="@style/AppButtonGradient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_18dp"
                android:layout_marginEnd="@dimen/_18dp"
                android:layout_marginBottom="@dimen/_24dp"
                android:layout_marginTop="@dimen/_32dp"
                android:text="@string/kirim_laporan"/>


        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>