<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/_24dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tambah_hari_libur"
        android:layout_marginTop="20dp"
        style="@style/tv18sp000000_avenir_heavy"
        android:layout_marginStart="@dimen/_16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btnClose"
        android:layout_width="@dimen/_16dp"
        android:layout_height="@dimen/_16dp"
        app:srcCompat="@drawable/ic_close_circle"
        android:layout_marginTop="@dimen/_16dp"
        android:layout_marginEnd="@dimen/_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/judul"
        style="@style/tv14spf48070_avenir_heavy"
        app:layout_constraintStart_toStartOf="@+id/textTitle"
        app:layout_constraintTop_toBottomOf="@+id/textTitle" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtJudul"
        style="@style/tv14sp000000_avenir_medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/masukkan_judul"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/dari"
        style="@style/tv14spf48070_avenir_heavy"
        app:layout_constraintStart_toStartOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/edtJudul" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtStartDate"
        style="@style/tv14sp000000_avenir_medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_14dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="@dimen/_16dp"
        android:background="@drawable/bg_edt_rounder_border"
        android:clickable="true"
        android:drawableEnd="@drawable/ic_calendar2"
        android:focusable="false"
        android:hint="@string/pilih_tanggal"
        android:paddingHorizontal="@dimen/_10dp"
        android:paddingVertical="@dimen/_8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/sampai"
        style="@style/tv14spf48070_avenir_heavy"
        app:layout_constraintStart_toStartOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/edtStartDate" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtEndDate"
        style="@style/tv14sp000000_avenir_medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:drawableEnd="@drawable/ic_calendar2"
        android:focusable="false"
        android:hint="@string/pilih_tanggal"
        android:layout_marginTop="@dimen/_8dp"
        android:paddingVertical="@dimen/_8dp"
        android:paddingHorizontal="@dimen/_10dp"
        android:background="@drawable/bg_edt_rounder_border"
        android:layout_marginStart="@dimen/_14dp"
        android:layout_marginEnd="@dimen/_16dp"
        android:paddingEnd="@dimen/_8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSimpan"
        style="@style/AppButtonGradient"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24dp"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginEnd="@dimen/_16dp"
        android:text="@string/tambah"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtEndDate" />

</androidx.constraintlayout.widget.ConstraintLayout>